@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<div>Attributes
+<div><h1>Attributes</h1>
   <dl>
     <dt><label for="element-attribute">Resulted elements</label></dt>
     <dd><input type="text" id="element-attribute"></dd>
@@ -24,13 +24,13 @@
     <dd><input type="text" id="frame-ancestor-attribute"></dd>
   </dl>
 </div>
-<div>
+<div><h1>Style to be inserted</h1>
   <dl>
     <dt><label for="style">Style</label></dt>
     <dd><textarea id="style"></textarea></dd>
   </dl>
 </div>
-<div>Popup styles
+<div><h1>Popup styles</h1>
   <dl>
     <dt><label for="popup-body-width">Body width(auto or px)</label></dt>
     <dd><input type="text" id="popup-body-width"></dd>
